# LMOps

opcd/pr_distill/: README.md  build_pr_dataset.py  eval_hints.py  prepare_hints.py  pyproject.toml  test_models.py  test_models_stream.py
opcd/pr_distill/notebooks/: pr_distill_training.ipynb
opcd/pr_distill/scripts/: colab_setup.sh  pr_consolidate_1gpu.sh  pr_extract_1gpu.sh  pr_generate_offp_1gpu.sh  pr_seqkd_1gpu.sh  pr_train_offp_1gpu.sh  prepare_data.sh
opcd/verl/verl/trainer/ppo/: ray_trainer.py
opcd/verl/verl/utils/: vllm_utils.py
opcd/verl/verl/workers/rollout/vllm_rollout/: vllm_rollout_spmd.py
