[project]
name = "pr-distill"
version = "0.1.0"
description = "Posterior-Refined Context Distillation experiments"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "datasets>=2.18",
    "tqdm>=4.66",
]

[project.optional-dependencies]
train = [
    "torch>=2.3",
    "vllm>=0.6",
    "ray[default]>=2.30",
    "wandb>=0.18",
]
